--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Best Git page</h1>
     <p> This is a paragraph</p>
-
+blablabla // ligne bleue modification des lignes
     <h2> More content</h2>
 
     <p> Creating content is so much</p>
@@ -16,5 +16,12 @@
     <h2> So much to say</h2>
 
     
+<h1> yeeee encore une ligne a rajouter </h1>
+
+<form action="form.php" method="post"></form>
+    <input type="text">
+
+
+    //en vert lignes rajoutées
 </body>
 </html>
