add lines index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <body>
     <h1> Best Git page</h1>
     <p> This is a paragraph</p>
-
+    Another line
     <h2> More content</h2>
 
     <p> Creating content is so much</p>
 
     <h2> So much to say</h2>
+    <p>the newest and greatest line!
+
+    </p>
 
     
 </body>
