add gitignore and text

--- a/exe.html
+++ b/exe.html
@@ -10,6 +10,7 @@
         <input type="email" name = "mail" id="email">
         <button type = "submit">Envoyer</button>
     </form>
+    coucou!
     
 </body>
 </html>
